# SYE

./: README.md
Lab10/: rapport.md
Lab10/so3/arch/arm32/: mmu.c
Lab10/usr/: build.sh
Lab10/usr/src/: CMakeLists.txt  ls.c  memory.c
Lab11/sye23_harun_ouweis-lab11/so3/fs/: Kconfig
Lab13/: build.conf
Lab13/usr/: build.sh
Lab13/usr/host/: CMakeLists.txt  memreplace.c
Lab13/usr/src/: sh.c
Lab2/: rapport.md
Lab2/so3/configs/: virt32_defconfig
Lab2/so3/kernel/: main.c
Lab2/usr/src/: CMakeLists.txt  hello  hello.c  ls.c
Lab3/so3/include/: version.h
Lab3/so3/kernel/: syscalls.c
Lab3/usr/src/: sh.c
Lab4/: rapport_Harun_Ouweis_Lab04.md
Lab4/so3/include/: syscall.h
Lab4/so3/kernel/: process.c  syscalls.c
Lab4/usr/src/: CMakeLists.txt  test_fork2.c
Lab5/so3/include/: syscall.h
Lab5/usr/src/: CMakeLists.txt  sh.c  sleep.c
Lab6/: rapport.md
Lab6/so3/kernel/: process.c
Lab6/usr/: build.sh
Lab6/usr/host/: CMakeLists.txt  lorem_small.txt  threads.c
Lab6/usr/src/: Makefile  sh.c
Lab7/: Makefile  stg
Lab7/so3/include/: memory.h
Lab7/usr/lib/: CMakeLists.txt
Lab7/usr/src/: CMakeLists.txt  sh.c  toupper.c
Lab8/rootfs/: deploy.sh
Lab8/so3/include/: process.h
Lab8/usr/host/: CMakeLists.txt  battleship.c
Lab8/usr/src/: CMakeLists.txt
Lab9/: Makefile  pack.sh  st
Lab9/so3/configs/: virt32_sched_prio_defconfig
Lab9/so3/fs/: vfs.c
Lab9/so3/include/: process.h  syscall.h  vfs.h
Lab9/so3/kernel/: process.c  syscalls.c
Lab9/usr/host/: CMakeLists.txt  build.sh
Lab9/usr/src/: CMakeLists.txt  sh.c  time_loop.c
(+13 files in other folders)
